import 'package:flutter/material.dart';

class VideoState extends ChangeNotifier {

}
